# Agentic-News-App

./: .gitignore  README.md  launch.py  pyproject.toml  requirements.txt  run.py  run_api.py
data/all_files/: test_news.txt
data/vector_store/b22052a0-a273-42e0-ae10-512bd98c4f51/: index_metadata.pickle
notebook_version/: document.ipynb
src/: __init__.py  chunking.py  data_ingestion.py  embedding.py  llm_interface.py  main.py  pipeline.py  retriever.py  vectorstore.py
src/api/: main.py
src/mcp/: server.py
src/utils/: logging_config.py
tests/: test_integration.py
